force-app/main/default/objects/User/fields/BB_Manager__c.field-meta.xml
<CustomField>
    <fullName>BB_Manager__c</fullName>
    <label>BB Manager</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>