force-app/main/default/objects/User/fields/DODL_Manager__c.field-meta.xml
<CustomField>
    <fullName>DODL_Manager__c</fullName>
    <label>DODL Manager</label>
    <relationshipName>User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>