force-app/main/default/objects/User/fields/PCA_Sup__c.field-meta.xml
<CustomField>
    <fullName>PCA_Sup__c</fullName>
    <label>PCA Sup</label>
    <relationshipName>Pcasup</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>