force-app/main/default/objects/User/fields/Sale_Sup__c.field-meta.xml
<CustomField>
    <fullName>Sale_Sup__c</fullName>
    <label>Sale Sup</label>
    <relationshipName>Salesup</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>