force-app/main/default/objects/User/fields/Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Manager__c</fullName>
    <label>Service Manager</label>
    <relationshipName>Servicemana</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>